fixed nav spacing

--- a/google-homepage.css
+++ b/google-homepage.css
@@ -1,5 +1,8 @@
 footer {
     background-color: rgb(248, 248, 248);
+    position: absolute;
+    bottom: 0;
+    width: 100%;
 }
 button:hover {
     box-shadow: 1px 1px gray;
@@ -16,14 +19,53 @@ button:hover {
     display: block;
     margin: auto;
 }
-
+.center {
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+}
 div {
     text-align: center;
-    margin-top: 20px;
+    margin-top: 10px;
+    margin-bottom: 20px;
+    font-size: 12px;
+    font-family: arial;
 }
-nav {
-    display: inline-flex;
+#nav1a {
+    font-size: 12px;
+    font-family: arial;
+    margin: 0;
+    padding: 0;
+    float: left;
+}
+#nav1b {
+    font-size: 12px;
+    font-family: arial;
+    margin: 0;
+    padding: 0;
+    padding-right: 8px;
+    float: right;
+}
+#nav2 {
+    font-size: 12px;
+    font-family: arial;
+    margin: 0;
+    padding: 0px;
+    text-align: center;
 }
 li {
+    display: inline-block;
     list-style-type: none;
+    padding-left: 15px;
+}
+a {
+    color: rgb(92, 91, 91);
+    text-decoration: none;
+}
+.topbar {
+    position: relative;
+    display: block;
+    float: left;
+    width: 100%
 }
